Proyecto2/k8s/db_mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: default
spec:
  selector:
    matchLabels:
      role: mongo
  replicas: 1
  template:
    metadata:
      labels:
        role: mongo
    spec:
      containers:
      - name: mongo
        image: mongo
        ports:
        - containerPort: 27017

---
apiVersion: v1
kind: Service
metadata:
  name: service-mongo
  namespace: default
spec:
  type: LoadBalancer
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    role: mongo
