Proyecto2/k8s/rust.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust
  namespace: default
spec:
  selector:
    matchLabels:
      role: rust
  replicas: 1
  template:
    metadata:
      labels:
        role: rust

    spec:
      containers:
      - name: rust-cliente
        image: crstn07/so1-p2-rust-cliente
        ports:
        - containerPort: 8000
      - name: rust-servidor
        image: crstn07/so1-p2-rust-servidor
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-rust
spec:
  type: LoadBalancer
  ports:
  - name: rust-client-port
    port: 8000
    targetPort: 8000
  - name: rust-servidor-port
    port: 8080
    targetPort: 8080
  selector:
    role: rust
